--- a/deny.toml
+++ b/deny.toml
@@ -10,7 +10,17 @@ unmaintained = "warn"
 yanked = "deny"
 notice = "warn"
 ignore = [
-    # Add specific advisory IDs to ignore if needed
+    "RUSTSEC-2025-0055",  # tracing-subscriber dev-only
+    "RUSTSEC-2025-0010",  # ring unmaintained (Substrate)
+]
+
+# Yanked crates that are safe to use (documented exceptions)
+[advisories.yanked]
+# const-hex 1.13.0 yanked but used by frame-metadata-hash-extension
+# This is a Substrate dependency, awaiting upstream fix
+enabled = true
+ignore = [
+    { crate = "const-hex", version = "=1.13.0" },
 ]
 
 [licenses]
