--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -69,8 +69,16 @@ jobs:
           path: ~/.cargo/registry
           key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Cache cargo-deny
+        id: cache-cargo-deny
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/bin/cargo-deny
+          key: ${{ runner.os }}-cargo-deny-0.16.1
+
       - name: Install cargo-deny
-        run: cargo install cargo-deny --locked
+        if: steps.cache-cargo-deny.outputs.cache-hit != 'true'
+        run: cargo install cargo-deny --locked --version 0.16.1
 
       - name: Check advisories (uses deny.toml for exceptions)
         run: cargo deny check advisories
