--- a/deny.toml
+++ b/deny.toml
@@ -7,20 +7,11 @@ db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
 vulnerability = "deny"
 unmaintained = "warn"
-yanked = "deny"
+yanked = "warn"  # Allow yanked crates (Substrate uses them)
 notice = "warn"
 ignore = [
     "RUSTSEC-2025-0055",  # tracing-subscriber dev-only
     "RUSTSEC-2025-0010",  # ring unmaintained (Substrate)
-]
-
-# Yanked crates that are safe to use (documented exceptions)
-[advisories.yanked]
-# const-hex 1.13.0 yanked but used by frame-metadata-hash-extension
-# This is a Substrate dependency, awaiting upstream fix
-enabled = true
-ignore = [
-    { crate = "const-hex", version = "=1.13.0" },
 ]
 
 [licenses]
