--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -126,7 +126,7 @@ jobs:
             --exclude attribute_store \
             --exclude policy_engine \
             --exclude payment_integration \
-            --features try-runtime \
+            --all-features \
             -- \
             -D warnings \
             -D clippy::all \
@@ -300,7 +300,7 @@ jobs:
           sudo apt-get install -y protobuf-compiler
 
       - name: Run tests
-        run: cargo test --workspace --exclude access_registry --exclude attribute_store --exclude policy_engine --exclude payment_integration
+        run: cargo test --workspace --exclude access_registry --exclude attribute_store --exclude policy_engine --exclude payment_integration --features try-runtime
 
   test-contracts:
     name: Test Contract (${{ matrix.contract }})
