--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,6 +10,9 @@ publish = false
 
 build = "build.rs"
 
+[lints]
+workspace = true
+
 [dependencies]
 clap = { features = ["derive"], workspace = true }
 frame-benchmarking-cli = { workspace = true, default-features = true }
