--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -120,7 +120,7 @@ jobs:
       - name: Check for outdated dependencies
         run: |
           cargo install cargo-outdated --locked
-          cargo outdated --exit-code 1 --features try-runtime || echo "::warning::Outdated dependencies found"
+          cargo outdated --exit-code 1 || echo "::warning::Outdated dependencies found"
         continue-on-error: true
 
       - name: Check Substrate updates
@@ -148,7 +148,7 @@ jobs:
           sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
 
       - name: Build node
-        run: cargo build --package arkavo-node --features try-runtime
+        run: cargo build --package arkavo-node
 
       - name: Run tests
-        run: cargo test --workspace --exclude access_registry --exclude attribute_store --exclude policy_engine --exclude payment_integration --features try-runtime
+        run: cargo test --workspace --exclude access_registry --exclude attribute_store --exclude policy_engine --exclude payment_integration
