--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,10 +41,10 @@ jobs:
           sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
 
       - name: Build node (release)
-        run: cargo build --release --package arkavo-node --features try-runtime
+        run: cargo build --release --package arkavo-node
 
       - name: Build runtime (release)
-        run: cargo build --release --package arkavo-runtime --features try-runtime
+        run: cargo build --release --package arkavo-runtime
 
       - name: Upload node binary
         uses: actions/upload-artifact@v4
