--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 edition.workspace = true
 publish = false
 
+[lints]
+workspace = true
+
 [dependencies]
 codec = { features = ["derive"], workspace = true }
 frame-benchmarking = { optional = true, workspace = true }
