--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -174,6 +174,7 @@ jobs:
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
+          components: rust-src
 
       - name: Cache cargo
         uses: actions/cache@v4
@@ -263,6 +264,7 @@ jobs:
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
+          components: rust-src
 
       - name: Cache cargo
         uses: actions/cache@v4
