--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -141,6 +141,7 @@ jobs:
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
+          components: rust-src
 
       - name: Install dependencies
         run: |
