--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,6 +25,7 @@ jobs:
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
+          components: rust-src
 
       - name: Cache cargo
         uses: actions/cache@v4
