--- a/contracts/attribute_store/Cargo.toml
+++ b/contracts/attribute_store/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 ink = { workspace = true, default-features = false }
 
