docs(security): add RUSTSEC-2026-0006 advisory to tracking (#71)
- Document new wasmtime CVE (RUSTSEC-2026-0006) in SECURITY.md
- Add advisory to deny.toml ignore list (upstream dependency)
- Update audit dates to 2026-02-01

This is a critical security advisory affecting wasmtime 35.0.0 used by
Substrate's WASM executor. Tracking until upstream fix is available.

--- a/deny.toml
+++ b/deny.toml
@@ -9,6 +9,7 @@ yanked = "warn"  # Allow yanked crates (Substrate uses them)
 ignore = [
     # Active vulnerabilities (upstream Substrate - awaiting update)
     "RUSTSEC-2025-0118",  # wasmtime 35.0.0 (sc-executor-wasmtime, needs >=38.0.4)
+    "RUSTSEC-2026-0006",  # wasmtime 35.0.0 (sc-executor-wasmtime, needs >=36.0.5)
 
     # Unmaintained crates (upstream Substrate dependencies)
     "RUSTSEC-2022-0061",  # parity-wasm (deprecated, used in sp-version)
