--- a/blockchain-node-api/package.json
+++ b/blockchain-node-api/package.json
@@ -15,6 +15,7 @@
     "@truffle/contract": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "logkitx": "^1.0.0",
     "nodemon": "^2.0.15",
     "web3": "^1.6.1"
   }
